--- a/src/theme/mobile.scss
+++ b/src/theme/mobile.scss
@@ -370,11 +370,6 @@ $tablet-width: 767px;
     display: flex !important;
     flex-direction: column;
 
-
-    app-select-plugin select {
-      width: unset !important;
-    }
-
     label {
       text-align: left !important;
     }
